Add peripheral functions for the Dim Chest of the Dimensional Storage mod. Also add Jade for better testing purposes.

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ ttoolkit_version=0.1.3
 cc_version=1.101.3
 curios_version=1.19.2-5.1.4.1
 minecolonies_version=1.19.2-1.1.36-BETA
-appliedenergistics_version=12.9.5
+appliedenergistics_version=12.9.8
 patchouli_version=1.19.2-77
 refinedstorage_version=1.11.7
 botania_version=1.19.2-440-FORGE
@@ -35,6 +35,7 @@ powah_version=4183078
 ae2additions_version=4646599
 kotlinforforge_version=3.12.0
 appliedmekanistics_version=4734608
+dimstorage_version=3927875
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
@@ -43,5 +44,9 @@ domumornamentum_version=1.19-1.0.83-ALPHA
 blockui_version=1.19-0.0.69-ALPHA
 multipiston_version=1.19.2-1.2.21-ALPHA
 
+# For DimStorage
+edivadlib_version=3927847
+
 # Mod dependencies for testing stuff(Only used in the dev environment)
 jei_version=1.19.2-forge:11.6.0.1016
+jade_version=4914105
