--- a/build.gradle
+++ b/build.gradle
@@ -314,6 +314,12 @@ dependencies {
     // Create
     compileOnly fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:all")
 
+    //DimStorage
+    compileOnly fg.deobf("curse.maven:dimstorage-353882:${dimstorage_version}")
+    runtimeOnly fg.deobf("curse.maven:dimstorage-353882:${dimstorage_version}")
+    compileOnly fg.deobf("curse.maven:edivadlib-638508:${edivadlib_version}")
+    runtimeOnly fg.deobf("curse.maven:edivadlib-638508:${edivadlib_version}")
+
     //Removed until fully ported
     //testImplementation fg.deobf("site.siredvin.ttoolkit:ttoolkit-${minecraft_version}:${ttoolkit_version}")
 
@@ -335,6 +341,8 @@ dependencies {
     // Testing stuff
     // JEI
     compileOnly fg.deobf("mezz.jei:jei-${jei_version}")
+    // Jade
+    implementation fg.deobf("curse.maven:jade-324717:${jade_version}")
 }
 
 
