--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 # Minecraft related
 mod_id=advancedperipherals
 minecraft_version=1.20.1
-neo_version=47.1.79
+neo_version=47.1.99
 loader_version=47
 mod_version=0.7.38r
 release_type=release
@@ -24,7 +24,7 @@ ttoolkit_version=0.1.3
 # Mod dependencies
 cc_version=1.108.4
 curios_version=5.2.0+1.20.1
-minecolonies_version=1.20.1-1.0.1525-ALPHA
+minecolonies_version=1.20.1-1.1.472-BETA
 appliedenergistics_version=15.0.9-beta
 patchouli_version=1.20.1-81
 refinedstorage_version=1.12.3
@@ -33,16 +33,16 @@ create_version=0.5.1.d-9
 mekanism_version=1.20.1-10.4.2.16
 ae2things_version=4616683
 powah_version=4638301
-ae2additions_version=4646598
+ae2additions_version=5077081
 kotlinforforge_version=4.10.0
 appliedmekanistics_version=4842281
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
-structurize_version=1.20-1.0.510-ALPHA
-domumornamentum_version=1.20-1.0.100-ALPHA
-blockui_version=1.20-0.0.84-ALPHA
-multipiston_version=1.19.3-1.2.26-ALPHA
+structurize_version=1.20.1-1.0.662-BETA
+multipiston_version=1.20-1.2.30-ALPHA
+blockui_version=1.20.1-0.0.101-ALPHA
+domumornamentum_version=1.20-1.0.150-BETA
 
 # For Create
 flywheel_version=0.6.8.a-1
