--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -11,19 +11,17 @@ jobs:
       - name: Set commit status as pending
         uses: myrotvorets/set-commit-status-action@v2.0.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           status: pending
           context: Building AP
-          sha: ${{ github.sha }}
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
       - name: Build with Gradle
         run: ./gradlew build
-      - name: Set final commit status
-        uses: myrotvorets/set-commit-status-action@v2.0.1
-        if: always()
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          status: ${{ job.status }}
-          context: Building AP
-          sha: ${{ github.sha }}
+  commit-status-final:
+    name: Set final commit status
+    uses: myrotvorets/set-commit-status-action@v2.0.1
+    if: always()
+    needs: build
+    with:
+      status: ${{ needs.build.result }}
+      context: Building AP
