--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -2,26 +2,31 @@ name: build-and-test
 run-name: Build and test the changes
 on: [push, pull_request, workflow_dispatch]
 jobs:
+  commit-status-start:
+    name: Set start commit status
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set start commit status
+        uses: myrotvorets/set-commit-status-action@v2.0.1
+        with:
+          context: Building AP
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
-      - name: Set commit status as pending
-        uses: myrotvorets/set-commit-status-action@v2.0.1
-        with:
-          status: pending
-          context: Building AP
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
       - name: Build with Gradle
         run: ./gradlew build
   commit-status-final:
     name: Set final commit status
-    uses: myrotvorets/set-commit-status-action@v2.0.1
-    if: always()
+    runs-on: ubuntu-latest
     needs: build
-    with:
-      status: ${{ needs.build.result }}
-      context: Building AP
+    steps:
+      - name: Set final commit status
+        uses: myrotvorets/set-commit-status-action@v2.0.1
+        with:
+          status: ${{ needs.build.result }}
+          context: Building AP
