--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Set start commit status
         uses: myrotvorets/set-commit-status-action@v2.0.1
         with:
-          token: ${{ secrets.AP_TOKEN }}
+          context: Building AP
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -28,5 +28,5 @@ jobs:
       - name: Set final commit status
         uses: myrotvorets/set-commit-status-action@v2.0.1
         with:
-          token: ${{ secrets.AP_TOKEN }}
           status: ${{ needs.build.result }}
+          context: Building AP
