--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -2,14 +2,16 @@ name: build-and-test
 run-name: Build and test the changes
 on: [push, pull_request, workflow_dispatch]
 jobs:
-  commit-status-start:
-    name: Set start commit status
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
-      - name: Set start commit status
-        uses: myrotvorets/set-commit-status-action@v2.0.1
-        with:
-          context: Building AP
+      - name: Checkout sources
+        uses: actions/checkout@v4
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+      - name: Build with Gradle
+        run: ./gradlew check
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -20,13 +22,3 @@ jobs:
         uses: gradle/gradle-build-action@v3
       - name: Build with Gradle
         run: ./gradlew build
-  commit-status-final:
-    name: Set final commit status
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Set final commit status
-        uses: myrotvorets/set-commit-status-action@v2.0.1
-        with:
-          status: ${{ needs.build.result }}
-          context: Building AP
